--- a/HTML/positive_impacts_of_Technology.html
+++ b/HTML/positive_impacts_of_Technology.html
@@ -1,87 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Positive impacts of Technology</title>
     <style>
-        header{
-            height:100px;
-            background-color: aliceblue;
-            color: black;
-            text-align: center;
-            padding: 5px;
-            margin-top: 0px;
-        }
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: white;
-            max-width: 100%;
-            max-height: 75%;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
             text-align: center;
         }
-        body p{
-            font-size: 20px;
-            text-align: center;
-            margin: auto;
+
+        h1 {
+            margin: 0;
+            font-size: 28px;
         }
-        h1{
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
+
+        .content {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        text{
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-            margin: auto;
+
+        p {
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 10px;
         }
-        body ul{
-            text-align: left;
-            font-size: larger;
+
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+
+        a {
+            color: #333;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Positive impacts of Technology</h1> <!--heading-->
-        </header>
-        <!--description of the  topic-->
-        <p class="text">Technology now has been a integral part of every human being. Specially, internet social 
-            media, household devices, smartphones and computer has been the closest friend of 
-            human being. So we will also be taking it as the basis for analyzing the positive impact of 
-            technology. The positive impact of technology can be understood with the help of the 
-            following points discussed <br>
-            <ul> <!--defined unordered list to show the points-->
-                <li>Industrial development: 
-                    The technology has been the base of industrial development. The first industrial revolution 
-                    in 1760 in Great Britain happened due to the development of industrial technology where 
-                    many machineries were used instead of human work force to produce various goods in the 
-                    industry. Technology has also helped in research and development of new products.</li>
-                    <li>Medical sector: 
-                        With the development of medical technology the human life expectance itself has been 
-                        improved and the average human now lives more due to available health services. Where 
-                        people used to wait for death after they had caught diseases in the previous times, people 
-                        now can cure even a life threatening diseases like cancer and heart attack only due to the 
-                        technology.</li>
-                        <li> Educational sector: 
-                            Technology has been a key factor for the development of education sector. People living in 
-                            one part of the world can easily know about the remains part of the world due to 
-                            information technology and internet. Because of technology the research and development 
-                            has been massively impacted. We knew about the importance if technology in the 
-                            educational sector special at the time of COVID where even when the world was into 
-                            lockdown the educational sector was somehow unimpacted due to online schooling.</li>
-                        </li>
-                        <li>Trade and business: 
-                            Along with industrial development technology has positively impacted the trade and 
-                            business sector. With the invention of e-commerce and digital marketing the trade now has 
-                            been more easy and the businesses are growing massively with the proper use of 
-                            technology. <br>
-                            It is extremely difficult to put the positive impact of the technology into words as every 
-                            sector has been impacted due to the development in the technology. Due to technology 
-                            normal household work has been easier and more simpler. Internet and social media has 
-                            created a state for people to express themselves. It has other positive impacts on sectors 
-                            like security, communication, biotech, aviation, transportation, aerospace and so on.</li>
-            </ul>
-             <a href="blog.html">Click here to go back.</a> <!--added hyperlink to go back to previous page-->
-            </p>
+        <h1>Positive impacts of Technology</h1>
+    </header>
+    <div class="content">
+        <p class="text">Technology has become an integral part of our lives. From the internet and social media to
+            household devices, smartphones, and computers, technology has become our closest companion. Let's explore
+            the positive impacts of technology:</p>
+        <ul>
+            <li>Industrial development: Technology has been the foundation of industrial development. It has
+                revolutionized the way goods are produced and has facilitated research and development of new products.
+            </li>
+            <li>Medical sector: Medical technology has significantly improved human life expectancy and has made it
+                possible to cure life-threatening diseases like cancer and heart attacks.</li>
+            <li>Educational sector: Technology has played a crucial role in the development of the education sector. It
+                has made it easier for people to access information and has greatly impacted research and development.
+                Online schooling during the COVID-19 pandemic is a prime example of technology's positive impact on
+                education.</li>
+            <li>Trade and business: Technology has positively impacted the trade and business sector. E-commerce and
+                digital marketing have made trade more accessible and have contributed to the growth of businesses.</li>
+        </ul>
+        <p>These are just a few examples of how technology has positively impacted various sectors. It has made
+            household work easier, provided a platform for self-expression through the internet and social media, and
+            has had positive impacts on security, communication, biotech, aviation, transportation, aerospace, and more.
+        </p>
+        <p><a href="blog.html">Click here to go back.</a></p>
+    </div>
 </body>
+
 </html>
