Refactor CSS styles and add link to team.css

--- a/HTML/arpanport.html
+++ b/HTML/arpanport.html
@@ -1,60 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arpan</title>
-    <style>     /*internal css*/
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: white;
-        }
-
-        header {
-            background-color: aliceblue;
-            color: black;
-            text-align: center;
-            padding: 5px;
-            margin-top: 0px;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h2 {
-            color: #333;
-        }
-
-        ul {
-            list-style-type: decimal;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        
-        img {
-            height: 50px;
-            width: 75px;
-        }
-    </style>
+    <link rel="stylesheet" href="../CSS/team.css">
 </head>
+
 <body>
 
-    <header>  <!--defines header-->
+    <header> <!--defines header-->
         <h1>Arpan Nepal</h1>
         <p>London Met id: 23048647</p>
     </header>
 
-    <section id="about">   <!--id provides info-->
+    <section id="about"> <!--id provides info-->
         <h2>About Me</h2>
-        <p>I am Arpan Nepal. I am the group leader of our team. I have done my schooling from The Celebration Co-Ed and 
+        <p>I am Arpan Nepal. I am the group leader of our team. I have done my schooling from The Celebration Co-Ed and
             highschooling in management from Global College of Management.
         </p>
     </section>
@@ -69,22 +32,26 @@
             </li>
         </ul>
     </section>
-    <section id="role">  <!--id provides info-->
+    <section id="role"> <!--id provides info-->
         <h2>My role</h2>
-        I have designed the home page of our website. Being the group leader, it was also my responsibilty to help and coordinate among my 
-        teammates. I helped them to find references from other sources. Just like my fellow teammates, I have also used the following skills to
-        develop the home page:<br> 
-        <ul>    <!--using unordered list to make a list of the skills used-->
+        I have designed the home page of our website. Being the group leader, it was also my responsibilty to help and
+        coordinate among my
+        teammates. I helped them to find references from other sources. Just like my fellow teammates, I have also used
+        the following skills to
+        develop the home page:<br>
+        <ul> <!--using unordered list to make a list of the skills used-->
             <li>HTML5</li>
             <li>CSS</li>
             <li>JavaScript</li>
         </ul>
         <p>
-            From this group coursework, I learnt many things regarding web develeopment and I will continue doing this as this got my intrest.</p>
-            Follow me:<br>
-            <a href="https://www.instagram.com/nneepal/"><img src="/Images/instagram.png"></a>
+            From this group coursework, I learnt many things regarding web develeopment and I will continue doing this
+            as this got my intrest.</p>
+        Follow me:<br>
+        <a href="https://www.instagram.com/nneepal/"><img src="/Images/instagram.png"></a>
     </section>
-    
+
 
 </body>
+
 </html>
