--- a/HTML/samyogport.html
+++ b/HTML/samyogport.html
@@ -1,52 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samyog</title>
-    <style>         /*internal css*/
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: white;
-        }
+    <link rel="stylesheet" href="../CSS/team.css">
 
-        header {
-            background-color:aliceblue;
-            color: black;
-            text-align: center;
-            padding: 5px;
-            margin-top: 0px;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h2 {
-            color: #333;
-        }
-
-        
-        img {
-            height: 50px;
-            width: 75px;
-        }
-    </style>
 </head>
+
 <body>
 
-    <header>  <!--defines header-->
+    <header> <!--defines header-->
         <h1>Samyog RajBhandari</h1>
         <p>London met id: 23048632</p>
     </header>
-    <section id="about">  <!--id provides info-->
+    <section id="about"> <!--id provides info-->
         <h2>About Me</h2>
-        <p>I am Samyog and I am the content writer of our project. I have designed the blog page in our website. 
-            I have helped my teammates to gather information from many different sources for their part of the project as well as for my 
-            part of the work. I did my schooling from Global School of Managemnt. Now I am currently pursueing with IT at Islington.
+        <p>I am Samyog and I am the content writer of our project. I have designed the blog page in our website.
+            I have helped my teammates to gather information from many different sources for their part of the project
+            as well as for my
+            part of the work. I did my schooling from Global School of Managemnt. Now I am currently pursueing with IT
+            at Islington.
         </p>
     </section>
     <section id="Experiences">
@@ -60,15 +35,17 @@
             </li>
         </ul>
     </section>
-    <section id="role">   <!--id provides info-->
+    <section id="role"> <!--id provides info-->
         <h2>My role</h2>
-        I have designed the blog page and references page in our website. I didnt have as much skills like my teammates 
+        I have designed the blog page and references page in our website. I didnt have as much skills like my teammates
         so they helped me to complete my part of the work. I have used basic HTML and CSS to design the blog page.<br>
-        <p>From this project I learnt the basics of HTML and CSS. I will practice it more and more to improve myself.</p>
+        <p>From this project I learnt the basics of HTML and CSS. I will practice it more and more to improve myself.
+        </p>
         Contact me:<br>
         <a href="https://www.instagram.com/rajbhandarisamyog/"><img src="/Images/instagram.png"></a>
     </section>
-    
+
 
 </body>
+
 </html>
