Update Instagram links and image sources

--- a/HTML/aashutoshport.html
+++ b/HTML/aashutoshport.html
@@ -47,7 +47,8 @@
         <p>From this project I learnt the use of JavaScript in web develeopment. I will improve myself in upcomming
             days.</p>
         Contact me from here:<br>
-        <a href="https://www.instagram.com/aashutosh_dhakal/"><img src="images/Instagram_icon.png.webp"></a>
+        <a href="https://www.instagram.com/aashutosh_dhakal/"> <img src="../images/Instagram_icon.png.webp"
+                class="square-image"></a>
     </section>
 
 </body>
