--- a/HTML/arpanport.html
+++ b/HTML/arpanport.html
@@ -48,7 +48,8 @@
             From this group coursework, I learnt many things regarding web develeopment and I will continue doing this
             as this got my intrest.</p>
         Follow me:<br>
-        <a href="https://www.instagram.com/nneepal/"><img src="/Images/instagram.png"></a>
+        <a href="https://www.instagram.com/nneepal/"> <img src="../images/Instagram_icon.png.webp"
+                class="square-image"></a>
     </section>
 
 
