--- a/HTML/piyushport.html
+++ b/HTML/piyushport.html
@@ -47,7 +47,9 @@
         </ul>
         <p>From this project, I learnt different functionalities of form and designing the form.</p>
         <p>Contact me from the following:</p>
-        <a href="https://www.instagram.com/piyushkarn87/"><img src="/Images/instagram.png"></a>
+        <a href="https://www.instagram.com/piyushkarn87/">
+            <img src="../images/Instagram_icon.png.webp" class="square-image">
+        </a>
     </section>
 
 
