--- a/HTML/samyogport.html
+++ b/HTML/samyogport.html
@@ -42,7 +42,8 @@
         <p>From this project I learnt the basics of HTML and CSS. I will practice it more and more to improve myself.
         </p>
         Contact me:<br>
-        <a href="https://www.instagram.com/rajbhandarisamyog/"><img src="/Images/instagram.png"></a>
+        <a href="https://www.instagram.com/rajbhandarisamyog/"> <img src="../images/Instagram_icon.png.webp"
+                class="square-image"></a>
     </section>
 
 
